Add integration test container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,17 @@ services:
       - 5000:5000
     volumes:
       - $PWD:/usr/src/app
+  tests:
+    build: tests
+    depends_on:
+      - app
+    volumes:
+      - $PWD/tests:/tests
+    working_dir: /tests
+    environment:
+      BASE_HOST: http://app:5000
+    command:
+      - python
+      - -m
+      - pytest
+      - /tests
